--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GDG New Delhi's Web Developers Day",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+"start": "nodemon index.js",    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -15,11 +15,13 @@
   "bugs": {
     "url": "https://github.com/gdgnewdelhi/web-dev-day/issues"
   },
+  "engines": { "node": ">=9.3.0" },
   "homepage": "https://github.com/gdgnewdelhi/web-dev-day#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "mongoose": "^5.4.8"
+    "mongoose": "^5.4.8",
+    "nodemon": "^1.18.10"
   }
 }
